--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
   width: 100vw;
   /* your properties here */
   display: grid;
-  grid-template: auto/ 1em 1em 1em;
+  grid-template: auto/ 20% 20% 20%;
 }
 
 .grid-item {
