--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body {
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr)
 }
 
 /* add the .bigItem class */
