--- a/index.css
+++ b/index.css
@@ -10,8 +10,8 @@ body {
   /* your properties here */
   display: grid;
   grid-template: auto/ 33% 33% 33%;
-  grid-gap: 5px
-  margin: auto
+  grid-gap: 5px;
+  margin: auto;
 }
 
 .grid-item {
