--- a/index.css
+++ b/index.css
@@ -23,7 +23,8 @@ body {
 
 /* add the .bigItem class */
 .bigItem{
- grid-area: 2 / 2 / 4 / 4;
+ width: 100%;
+ height: 100%;
  grid-area: 2 / 2 / 4 / 4;
   justify-self: center;
   align-self: center;
